<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="_one_symbol">1</string>
    <string name="_two_symbol">2</string>
    <string name="_three_symbol">3</string>
    <string name="_four_symbol">4</string>
    <string name="_five_symbol">5</string>
    <string name="_six_symbol">6</string>
    <string name="_seven_symbol">7</string>
    <string name="_eight_symbol">8</string>
    <string name="_nine_symbol">9</string>
    <string name="_zero_symbol">0</string>
    <string name="_dot_symbol">.</string>
    <string name="_plus_symbol">+</string>
    <string name="_minus_symbol">-</string>
    <string name="_multiply_symbol">*</string>
    <string name="_divide_symbol">/</string>
    <string name="_equal_symbol">=</string>
    <string name="_reset_symbol">AC</string>
    <string name="_backspace_symbol">⌫</string>
    <string name="_percent">%</string>
    <string name="_0">0</string>
    <string name="moon_symbol">☾</string>
    <string name="sun_symbol">☼</string>
    <string name="_choose_theme">Выбор темы</string>
    <string name="theme_tip_text">Выберите одну из тем приложения ниже</string>
    <string name="standard_style_text">Стандартный стиль: синий</string>
    <string name="punk_style_text">Розовый стиль</string>
    <string name="green_style_text">Зелёный стиль</string>
    <string name="dark_theme_text">Тёмная тема</string>
</resources>