<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_16dp"
    tools:context=".ui.MainCalcActivity">


    <TextView
        android:id="@+id/resultShowingField"
        style="@style/textViewStyleVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@id/button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultShowingField"
        tools:text="RESULT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        style="@style/lightButtons"
        android:text="@string/_reset_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/resultShowingField"
        app:layout_constraintTop_toBottomOf="@id/resultShowingField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        style="@style/lightButtons"
        android:text="@string/_backspace_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_percent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_reset"
        app:layout_constraintTop_toTopOf="@id/button_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        style="@style/lightButtons"
        android:text="@string/_percent"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_backspace"
        app:layout_constraintTop_toTopOf="@id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        style="@style/lightEndButtons"
        android:text="@string/_divide_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/resultShowingField"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toTopOf="@id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_one"
        style="@style/lightButtons"
        android:text="@string/_one_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_reset"
        app:layout_constraintTop_toBottomOf="@id/button_reset" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_two"
        style="@style/lightButtons"
        android:text="@string/_two_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_three"
        style="@style/lightButtons"
        android:text="@string/_three_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        style="@style/lightEndButtons"
        android:text="@string/_multiply_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="@+id/button_divide"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_four"
        style="@style/lightButtons"
        android:text="@string/_four_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_five"
        style="@style/lightButtons"
        android:text="@string/_five_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_six"
        style="@style/lightButtons"
        android:text="@string/_six_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/lightEndButtons"
        android:text="@string/_minus_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/resultShowingField"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_seven"
        style="@style/lightButtons"
        android:text="@string/_seven_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_eight"
        style="@style/lightButtons"
        android:text="@string/_eight_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/button_five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_nine"
        style="@style/lightButtons"
        android:text="@string/_nine_symbol"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/button_six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        style="@style/lightEndButtons"
        android:text="@string/_plus_symbol"
        app:layout_constraintEnd_toEndOf="@+id/resultShowingField"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_zero"
        style="@style/lightButtons"
        android:text="@string/_zero_symbol"
        app:layout_constraintEnd_toEndOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/button_eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        style="@style/lightButtons"
        android:text="@string/_dot_symbol"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        style="@style/lightEndButtons"
        android:text="@string/_equal_symbol"
        app:layout_constraintEnd_toEndOf="@+id/resultShowingField"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chooseThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_choose_theme"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

