<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ThemeChooserActivity">

    <TextView
        android:id="@+id/tipText"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/theme_tip_text"
        android:textSize="@dimen/_main_text_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/firstStyleButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/firstStyleButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_64dp"
        android:text="@string/standard_style_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nightStyleButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_64dp"
        android:text="@string/dark_theme_text"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/firstStyleButton"
        app:layout_constraintStart_toStartOf="@id/firstStyleButton"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/secondStyleButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_64dp"
        android:text="@string/punk_style_text"
        android:backgroundTint="@color/punk"
        app:layout_constraintStart_toStartOf="@+id/firstStyleButton"
        app:layout_constraintTop_toBottomOf="@id/nightStyleButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/thirdStyleButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_64dp"
        android:text="@string/green_style_text"
        android:backgroundTint="@color/darkGreen"
        app:layout_constraintStart_toStartOf="@+id/secondStyleButton"
        app:layout_constraintTop_toBottomOf="@id/secondStyleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>